add selection shapes

--- a/src/main/resources/assets/fecore/lang/en_us.json
+++ b/src/main/resources/assets/fecore/lang/en_us.json
@@ -6,5 +6,63 @@
 	"narration.scrollbar.horizontal.usage.hovered": "Use your horizontal scrolling to scroll, if you have one and are not on MacOS",
 	"narration.scrollbar.vertical.title": "Vertical scrollbar",
 	"narration.scrollbar.vertical.usage.focused": "Press UP or DOWN to scroll",
-	"narration.scrollbar.vertical.usage.hovered": "Use your scroll wheel to scroll"
+	"narration.scrollbar.vertical.usage.hovered": "Use your scroll wheel to scroll",
+	"fecore.shapesgui.position": "Position",
+	"fecore.shapesgui.position.x": "X Position",
+	"fecore.shapesgui.position.y": "Y Position",
+	"fecore.shapesgui.position.z": "Z Position",
+	"fecore.shapesgui.position.1": "Position 1",
+	"fecore.shapesgui.position.1.x": "First X Position",
+	"fecore.shapesgui.position.1.y": "First Y Position",
+	"fecore.shapesgui.position.1.z": "First Z Position",
+	"fecore.shapesgui.position.2": "Position 2",
+	"fecore.shapesgui.position.2.x": "Second X Position",
+	"fecore.shapesgui.position.2.y": "Second Y Position",
+	"fecore.shapesgui.position.2.z": "Second Z Position",
+	"fecore.shapesgui.radius": "Radius",
+	"fecore.shapesgui.operator.relative": "Relative",
+	"fecore.shapesgui.operator.absolute": "Absolute",
+	"fecore.shapesgui.size": "Size",
+	"fecore.shapesgui.size.x": "X Size",
+	"fecore.shapesgui.size.y": "Y Size",
+	"fecore.shapesgui.size.z": "Z Size",
+	"fecore.shapetool.position.selected": "Now setting position",
+	"fecore.shapetool.position.set": "Set position to %s",
+	"fecore.shapetool.position.1.selected": "Now setting position 1",
+	"fecore.shapetool.position.1.set": "Set position 1 to %s",
+	"fecore.shapetool.position.2.selected": "Now setting position 2",
+	"fecore.shapetool.position.2.set": "Set position 2 to %s",
+	"fecore.shapetool.radius.selected": "Now setting radius",
+	"fecore.shapetool.radius.set": "Set radius to %d",
+	"fecore.shapetool.height.selected": "Now setting height",
+	"fecore.shapetool.height.set": "Set height to %d",
+	"fecore.shapetool.size.x.selected": "Now setting X size",
+	"fecore.shapetool.size.x.set": "Set X size to %d",
+	"fecore.shapetool.size.y.selected": "Now setting Y size",
+	"fecore.shapetool.size.y.set": "Set Y size to %d",
+	"fecore.shapetool.size.z.selected": "Now setting Z size",
+	"fecore.shapetool.size.z.set": "Set Z size to %d",
+	"fecore.shapetool.invalid": "Invalid shape: was %d, reverting to %d",
+	"fecore.shapetool.new": "Initializing shape to %d",
+	"fecore.shapetool.mode": "Setting mode to %d",
+	"fecore.shapetool.tooltip.relative": "Relative coordinates",
+	"fecore.shapetool.tooltip.absolute": "Absolute coordinates",
+	"fecore.shapetool.tooltip.position": "Position: %s",
+	"fecore.shapetool.tooltip.position.1": "First position: %s",
+	"fecore.shapetool.tooltip.position.2": "Second position: %s",
+	"fecore.shapetool.tooltip.size": "Size: %d",
+	"fecore.shapetool.tooltip.add_pos": "Use on a block to select (add) a position",
+	"fecore.shapetool.tooltip.remove_pos": "Use on air to remove a position",
+	"fecore.shapetool.tooltip.change_mode": "sneak+use to change mode",
+	"fecore.shapetool.tooltip.use_block": "sneak+use on a block to activate the block",
+	"fecore.shape.none": "No Shape",
+	"fecore.shape.all": "Everything",
+	"fecore.shape.sphere": "Sphere",
+	"fecore.shape.cylinder": "Cylinder",
+	"fecore.shape.box.offsets": "Box by Size",
+	"fecore.shape.box.positions": "Box by Positions",
+	"fecore.shape.addition": "Group",
+	"fecore.shape.intersection": "Intersection",
+	"fecore.shape.inversion": "Outside",
+	"item.fecore.shape_tool": "Shape Tool (%s)"
 }
