additions and improvements to selection shapes
add in shape configuration GUI
add in networking
remove Vec3d class and replace with Vec3
replace interface-based shape tool code with capabilities-based code
fix issues with better screens rendering

--- a/src/main/resources/assets/fecore/lang/en_us.json
+++ b/src/main/resources/assets/fecore/lang/en_us.json
@@ -7,6 +7,17 @@
 	"narration.scrollbar.vertical.title": "Vertical scrollbar",
 	"narration.scrollbar.vertical.usage.focused": "Press UP or DOWN to scroll",
 	"narration.scrollbar.vertical.usage.hovered": "Use your scroll wheel to scroll",
+	"fecore.gui.done": "Done",
+	"fecore.gui.confirm": "Confirm",
+	"fecore.gui.cancel": "Cancel",
+	"fecore.gui.exit": "Exit",
+	"fecore.gui.save": "Save",
+	"fecore.shapesgui": "Shape configuration GUI",
+	"fecore.shapesgui.configure": "Configure shape (%s)",
+	"fecore.shapesgui.mainhand.from": "From main hand",
+	"fecore.shapesgui.mainhand.to": "To main hand",
+	"fecore.shapesgui.offhand.from": "From off hand",
+	"fecore.shapesgui.offhand.to": "To off hand",
 	"fecore.shapesgui.position": "Position",
 	"fecore.shapesgui.position.x": "X Position",
 	"fecore.shapesgui.position.y": "Y Position",
@@ -20,12 +31,15 @@
 	"fecore.shapesgui.position.2.y": "Second Y Position",
 	"fecore.shapesgui.position.2.z": "Second Z Position",
 	"fecore.shapesgui.radius": "Radius",
+	"fecore.shapesgui.height": "Height",
 	"fecore.shapesgui.operator.relative": "Relative",
 	"fecore.shapesgui.operator.absolute": "Absolute",
 	"fecore.shapesgui.size": "Size",
 	"fecore.shapesgui.size.x": "X Size",
 	"fecore.shapesgui.size.y": "Y Size",
 	"fecore.shapesgui.size.z": "Z Size",
+	"fecore.shapesgui.compound.add": "Add component",
+	"fecore.shapesgui.compound.remove": "Remove",
 	"fecore.shapetool.position.selected": "Now setting position",
 	"fecore.shapetool.position.set": "Set position to %s",
 	"fecore.shapetool.position.1.selected": "Now setting position 1",
@@ -50,7 +64,9 @@
 	"fecore.shapetool.tooltip.position": "Position: %s",
 	"fecore.shapetool.tooltip.position.1": "First position: %s",
 	"fecore.shapetool.tooltip.position.2": "Second position: %s",
-	"fecore.shapetool.tooltip.size": "Size: %d",
+	"fecore.shapetool.tooltip.size": "Size: %s",
+	"fecore.shapetool.tooltip.radius": "Radius: %d",
+	"fecore.shapetool.tooltip.height": "Height: %d",
 	"fecore.shapetool.tooltip.add_pos": "Use on a block to select (add) a position",
 	"fecore.shapetool.tooltip.remove_pos": "Use on air to remove a position",
 	"fecore.shapetool.tooltip.change_mode": "sneak+use to change mode",
