--- a/src/main/resources/assets/fecore/lang/en_us.json
+++ b/src/main/resources/assets/fecore/lang/en_us.json
@@ -69,8 +69,9 @@
 	"fecore.shapetool.tooltip.height": "Height: %d",
 	"fecore.shapetool.tooltip.add_pos": "Use on a block to select (add) a position",
 	"fecore.shapetool.tooltip.remove_pos": "Use on air to remove a position",
-	"fecore.shapetool.tooltip.change_mode": "sneak+use to change mode",
-	"fecore.shapetool.tooltip.use_block": "sneak+use on a block to activate the block",
+	"fecore.shapetool.tooltip.change_mode": "Sneak+use to change mode",
+	"fecore.shapetool.tooltip.use_block": "Sneak+use on a block to activate the block",
+	"fecore.shapetool.tooltip.open_gui": "Use attack to open a configuration GUI",
 	"fecore.shape.none": "No Shape",
 	"fecore.shape.all": "Everything",
 	"fecore.shape.sphere": "Sphere",
