add polygon bounding shape

--- a/src/main/resources/assets/fecore/lang/en_us.json
+++ b/src/main/resources/assets/fecore/lang/en_us.json
@@ -38,14 +38,21 @@
 	"fecore.shapesgui.size.x": "X Size",
 	"fecore.shapesgui.size.y": "Y Size",
 	"fecore.shapesgui.size.z": "Z Size",
-	"fecore.shapesgui.compound.add": "Add component",
-	"fecore.shapesgui.compound.remove": "Remove",
+	"fecore.shapesgui.compound.add": "Add shape",
+	"fecore.shapesgui.compound.remove": "Remove shape",
+	"fecore.shapesgui.point.index": "Point %d",
+	"fecore.shapesgui.point.add": "Add point",
+	"fecore.shapesgui.point.remove": "Remove point",
+	"fecore.shapesgui.point.insert.before": "Add point before",
+	"fecore.shapesgui.point.insert.after": "Add point after",
 	"fecore.shapetool.position.selected": "Now setting position",
 	"fecore.shapetool.position.set": "Set position to %s",
 	"fecore.shapetool.position.1.selected": "Now setting position 1",
 	"fecore.shapetool.position.1.set": "Set position 1 to %s",
 	"fecore.shapetool.position.2.selected": "Now setting position 2",
 	"fecore.shapetool.position.2.set": "Set position 2 to %s",
+	"fecore.shapetool.position.added": "Added position %s",
+	"fecore.shapetool.position.removed": "Removed position %s",
 	"fecore.shapetool.radius.selected": "Now setting radius",
 	"fecore.shapetool.radius.set": "Set radius to %d",
 	"fecore.shapetool.height.selected": "Now setting height",
@@ -64,6 +71,9 @@
 	"fecore.shapetool.tooltip.position": "Position: %s",
 	"fecore.shapetool.tooltip.position.1": "First position: %s",
 	"fecore.shapetool.tooltip.position.2": "Second position: %s",
+	"fecore.shapetool.tooltip.position.limits.y": "From Y=%d to Y=%d",
+	"fecore.shapetool.tooltip.position.coordinates": "Contains points:",
+	"fecore.shapetool.tooltip.position.coordinate": "<%d, %d>",
 	"fecore.shapetool.tooltip.size": "Size: %s",
 	"fecore.shapetool.tooltip.radius": "Radius: %d",
 	"fecore.shapetool.tooltip.height": "Height: %d",
@@ -78,6 +88,7 @@
 	"fecore.shape.cylinder": "Cylinder",
 	"fecore.shape.box.offsets": "Box by Size",
 	"fecore.shape.box.positions": "Box by Positions",
+	"fecore.shape.polygon": "Polygon",
 	"fecore.shape.addition": "Group",
 	"fecore.shape.intersection": "Intersection",
 	"fecore.shape.inversion": "Outside",
