hopefully complete coremod
add proper configuration screen
add Translator helper class
use Deferred registers instead of manual registry
defaulted box shape on item tool now sets to absolute automatically
polygon bounding shape is now selectable in the shape tool via shift-right-clicking
shape tool now properly detects shift key held in air
fixed rendering of box by offsets shape preview
added CompatProvider base classes
added FECoreUtil with getURLForResource method
added logo

--- a/src/main/resources/assets/fecore/lang/en_us.json
+++ b/src/main/resources/assets/fecore/lang/en_us.json
@@ -1,4 +1,5 @@
 {
+	"fecore.configgui": "FECore Configuration",
 	"fecore.configgui.scrollSensitivity": "Scrolling Sensitivity",
 	"narrator.position.componentholder": "Component %d out of %d",
 	"narration.scrollbar.horizontal.title": "Horizontal scrollbar",
